--- a/bmc_virtualfoodcourt/package.json
+++ b/bmc_virtualfoodcourt/package.json
@@ -1,9 +1,11 @@
 {
-  "name": "demo-app",
-  "version": "0.0.0",
+  "name": "vfc-app",
+  "version": "1.0.0",
+  "description": "Virtual Food Court App",
+  "main": "app.js",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node app",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -27,7 +29,15 @@
     "hammerjs": "^2.0.8",
     "ngx-cookie-service": "^1.0.10",
     "rxjs": "^5.5.10",
-    "zone.js": "^0.8.26"
+    "zone.js": "^0.8.26",
+    "express": "*",
+    "mongoose": "*",
+    "bcryptjs": "*",
+    "cors": "*",
+    "jsonwebtoken": "*",
+    "body-parser": "*",
+    "passport": "*",
+    "passport-jwt": "*"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.6.0",
@@ -49,5 +59,7 @@
     "ts-node": "~5.0.1",
     "tslint": "~5.9.1",
     "typescript": "^2.6.2"
-  }
+  },
+  "author": "Anoop V. Mathew & Bhargavi MC",
+  "license": "ISC"
 }
