--- a/vfc2/angular-src/package.json
+++ b/vfc2/angular-src/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "^6.0.0",
     "@angular/router": "^6.0.0",
     "angular-bootstrap-md": "^6.0.2",
+    "angular2-flash-messages": "^2.0.5",
     "chart.js": "^2.5.0",
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
