--- a/vfc2/angular-src/tsconfig.json
+++ b/vfc2/angular-src/tsconfig.json
@@ -16,6 +16,9 @@
     "typeRoots": [
       "node_modules/@types"
     ],
+    // "types": [
+    //          "node", "jasmine", "facebook-js-sdk"
+    //    ],
     "lib": [
       "es2017",
       "dom"
