--- a/vfc2/package.json
+++ b/vfc2/package.json
@@ -8,12 +8,16 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "body-parser": "*",
+    "body-parser": "^1.18.3",
     "cors": "*",
     "ejs": "^2.6.1",
     "express": "^4.16.3",
+    "gridfs-stream": "^1.1.1",
     "jsonwebtoken": "*",
-    "mongoose": "*",
+    "method-override": "^3.0.0",
+    "mongoose": "^5.2.6",
+    "multer": "^1.3.1",
+    "multer-gridfs-storage": "^3.0.1",
     "passport": "*",
     "passport-jwt": "*",
     "paypal-rest-sdk": "^1.8.1",
