--- a/vfc2/angular-src/package.json
+++ b/vfc2/angular-src/package.json
@@ -27,8 +27,12 @@
     "angular4-social-login": "^1.1.1",
     "chart.js": "^2.5.0",
     "core-js": "^2.5.4",
+    "file-saver": "^1.3.8",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
+    "multer": "^1.3.1",
+    "ng2-file-upload": "^1.3.0",
+    "ng4-file-upload": "^5.1.7",
     "ngx-cookie-service": "^1.0.10",
     "passport-facebook": "^2.1.1",
     "randomstring": "^1.1.5",
